...
                                ProductDetailCell(stringResource(id = R.string.terrain), it.terrain)
                            }


                        }, modifier = Modifier
                            .fillMaxSize()
                            .testTag("planetDetailList"))
                    }
                }

            }
        }
    }
...
